# Whisper

./: Goals.md  README.md  listener.py  lockedQueue.py  main.py  pyproject.toml  result.txt  test.py  whisper_test.py  worker.py
whisper_spln/: __init__.py  listener.py  lockedQueue.py  main.py  parserTasks.py  result.txt  startThreads.py  whisper_test.py  worker.py
whisper_spln/conf/: exec_time
